# CCF

./: .azure-pipelines-gh-pages.yml  .threading_canary  CHANGELOG.md  CMakeLists.txt  do.sh  plotagg.py  quote_info.json  set_ca_cert_bundle.json  set_jwt_issuer.json  tls_auth_debugging.md  vote_for.json
.azure-pipelines-templates/: common.yml  deploy_aci.yml  matrix.yml  release.yml
attestation-container/: go.mod  go.sum
ccf-0.11.1/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  search.html  searchindex.js
ccf-0.11.4/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  search.html
ccf-0.11.7/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  search.html
cmake/: ccf_app.cmake  common.cmake  crypto.cmake  open_enclave.cmake  preproject.cmake  secp256k1.cmake
doc/: conf.py  requirements.txt
master/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
python/: requirements.txt
tests/: all_claims.json  claims_schema.json  client_creation.py  config.jinja  e2e_logging.py  e2e_notify.py  fes.py  governance.py  governance_history.py  jwt_test.py  mem.py  membership.py  plotagg.py  private_claim_sample.json  public_claim_sample.json  recovery.py  requirements.txt  rotation.py  schema.py  server_test.py  sim_trace_viz.py  start_network.py  validate_claim.py
tla/: Traceccfraft.cfg  Traceccfraft.tla  repro.sh  trace.ndjson
v0.10/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  introduction.html  search.html  searchindex.js
v0.11/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
v0.11.1/: .buildinfo  concepts.html  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js
(+701 files in other folders)
